integration-tests/tests/errors/views/unhandled-rejection-inline.ejs
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="UTF-8">
	<title>Errors test</title>
  <%- renderInlineAgent() %>
  <script id="scenario">
    setTimeout(function() {
      Promise.reject('rejection-value');
    });
  </script>
</head>
<body>
  <h1>Unhandled rejection</h1>
  <%- renderAgent({}) %>
</body>
</html>
